# autismal

./: .gitignore  Cargo.toml  flake.nix
.github/: deploy.yaml
deployment/: Chart.yaml  values.yaml
deployment/templates/: _helpers.tpl  deployment.yaml  secret.yaml
nix/: default.nix
src/: main.rs
src/commands/: age.rs  coinflip.rs  gay.rs  jakbot.rs  mod.rs
src/helpers/: mod.rs
