[package]
name = "autismal"
version = "0.1.0"
edition = "2024"

[dependencies]
# serenity = { version = "0.11.7", default-features = false, features = [
#     "client",
#     "gateway",
#     "model",
#     "http",
#     "utils",
#     "rustls_backend", # or native_tls_backend if you prefer
# ] }

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
poise = { version = "0.6.1" }
rand = "0.9.2"
once_cell = "1.21.3"
